--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,10 @@ jobs:
         with:
           path: repo
       
+      - run: ls repo
+
+      - run: ls
+      
       - uses: actions/setup-node@v2-beta
       
       - name: install TS
